<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evolve POS</string>
    <string name="toast_invalid_field">Invalid field value</string>
    <string name="dialog_invalid_title">Invalid fields</string>
    <string name="name_hint">Name</string>
    <string name="street_address_hint">Address</string>
    <string name="state_address_hint">State</string>
    <string name="city_address_hint">City</string>
    <string name="zip_address_hint">Zip code</string>
    <string name="email_hint">Email</string>
    <string name="mobile_phone_hint">Mobile</string>
    <string name="evening_phone_hint">Evening</string>
    <string name="volunteer">Volunteer</string>
    <string name="keep_informed">Keep me informed</string>
    <string name="amount_hint">Amount</string>
    <string name="cc_number_hint">Credit card number</string>
    <string name="cc_month_hint">Month</string>
    <string name="cc_year_hint">Year</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="file_upload_successful">Data uploaded successfully.</string>
    <string name="dialog_submit_message">Warning: this cannot be undone.</string>
    <string name="dialog_submit_title">Submit?</string>
    <string name="dialog_submit_positive_button">Submit</string>
    <string name="dialog_submit_negative_button">Cancel</string>
    <string name="currently_uploading">Please wait until the previous upload is finished.</string>
    <string name="dialog_thanks_message">Thank you for your donation.</string>
    <string name="dialog_no_connection_message">Please make sure that you are connected to a network.</string>
    <string name="dialog_no_connection_title">No internet connection found!</string>
    <string name="dialog_no_connection_positive_button">Retry</string>
    <string name="dialog_no_connection_negative_button">Cancel</string>
    <string name="toast_no_data_to_upload">There is no new data to upload</string>

</resources>
